Archive2/58/518b978fec3dba/output
main.cpp: In function 'int main()':
main.cpp:23:8: error: cannot bind 'X' lvalue to 'X&&'
   foo(x);
        ^
main.cpp:13:6: error: in passing argument 1 of 'void foo(X&&)'
 void foo(X&&)
      ^
